  Changes:
    - Disabled the original method of ranking up items to red stars (destroy your ship outside of the solar system while carrying hextreme items).
    - Removed the mod setting for default trade quality bounds.
    - Trades now only use a single quality at a time.
  Balancing:
    - Added mod setting that toggles the allowance of two-headed trains in trading.
    - Changed the default value for the base trade efficiency setting from 1.0 to 0.8, where at least 25% trade productivity is required to create infinite coin loops.
  Bugfixes:
    - Fixed the game crashing upon destroying your car and a biter/spawner spawner in the same collision.
    - Fixed that disconnecting from a server (losing connection, being kicked, force-quitting, etc.) was teleporting you to your remote view location upon rejoining.
    - Fixed that the claim hexes tool wasn't taking coins from the piggy bank when in remote view.
    - Fixed that sometimes a hex core's GUI wouldn't update when one of its trades is made.
  Modding:
    - Added remote interfaces.
  Optimizations:
    - Optimized overall trading performance. The improvement is proportional to the number of players online at once.
    - Slightly optimized coin calculations.
    - Optimized random trade generation.
---------------------------------------------------------------------------------------------------
Version: 1.5.10
Date: 25/1/26
  Bugfixes:
    - Fixed the game crashing upon placing a mining drill.
    - Fixed the game crashing upon breaking a strongbox on a save created with version 1.5.9.
    - Fixed the game crashing upon finding trades with expensive items in them.
---------------------------------------------------------------------------------------------------
Version: 1.5.9
Date: 25/1/26
  Bugfixes:
    - Fixed that most features consuming coins would auto-sort the rest of your coins into your piggy bank before it was unlocked.