@@ -71,6 +71,7 @@ removed-all-values=Removed value for [item=__1__] on all planets.
 item-values-imported=Item values successfully imported.
 feature-locked=Unlock __1__ from the __2__ quest to use this feature.
 quest-disabled=Quest disabled: __1__
+dungeon-nearby-prevented-tp=[img=utility.warning_icon] Warning! That hex is adjacent to an unlooted dungeon. Teleport again to confirm.
 
 [command-help]
 hextorio-commands=List all commands added by Hextorio.
