@@ -8,6 +8,7 @@ Date: 1/2/26
     - Disabled the original method of ranking up items to red stars (destroy your ship outside of the solar system while carrying hextreme items).
     - Removed the mod setting for default trade quality bounds.
     - Trades now only use a single quality at a time.
+    - Teleporting to a hex core adjacent to a dungeon now requires confirmation (pressing hotkey/button again to confirm).
   Balancing:
     - Added mod setting that toggles the allowance of two-headed trains in trading.
     - Changed the default value for the base trade efficiency setting from 1.0 to 0.8, where at least 25% trade productivity is required to create infinite coin loops.
